Tue Oct 16 12:32:16 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AdjacencyVH.java
	  src/org/jcae/mesh/amibe/ds/TriangleVH.java
	  src/org/jcae/mesh/amibe/ds/AdjacencyHE.java
	  src/org/jcae/mesh/amibe/ds/TriangleHE.java: Make AdjacencyVH an
	inner class of TriangleVH and AdjacencyHE an inner class of
	TriangleHE.

Mon Oct 15 16:35:55 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java (collapse): Modify
	return value to make swap(), split() and collapse() more coherent.

Sun Oct 14 16:47:52 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshReader.java
	  src/org/jcae/mesh/amibe/util/UNVReader.java: Add nodes to mesh
	if its traitsBuilder requested it.  Update calls to buildAdjacency().
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Due to
	the change in QSortedTree.update() at 31st August, we must know
	call QSortedTree.insert() if edge is not present in tree.

Sat Oct 13 22:52:30 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Really
	update all incident edges with non-manifold meshes.

Fri Oct 12 12:43:06 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: Current signature of
	buildAdjacency() is not very intuitive, there is no reason to
	pass a list of vertices.  Add methods with less arguments and
	declare current method as being deprecated.

Wed Oct 10 14:16:01 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/mesher/ds
	  src/org/jcae/mesh/mesher/algos1d: Move remaining bits from ancient
	data structure into src/org/jcae/mesh/amibe.

Wed Oct 10 00:35:43 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (collapse): Fix
	method to also work for non-manifold meshes.